# HYB-CSTLM-NN

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
CMakeModules/: CheckAVX2.cmake
Profiling/: README  README~  callgrind.out.2675  foo.dot  foo2.dot  truncate_node_labels.py
UnitTestData/: test.data~
UnitTestData/data/: README.undoc  char_numberise.py  debug.py  test.data  training.data  undoc.lex  undoc_2000_fr_en_100k.test  undoc_2000_fr_en_sample.nums  undoc_2000_fr_en_sample.test  undoc_2000_fr_en_sample.train  undoc_2000_fr_en_sample.txt  undoc_2000_fr_en_sample2.txt
UnitTestData/kenlm_output/: output_kenlm
UnitTestData/script/: script.sh~
UnitTestData/scripts/: kenlm_script.sh  script.sh~  script_sdsl.sh  script_srilm.sh  srilm_script.sh
UnitTestData/sdsl_output/: output  output~
UnitTestData/srilm_output/: output  output_srilm  output_srilm_kn  output_srilm_mkn  output~
collections/toy/: .gitignore  text.TEXT
collections/unittest/: .gitignore  text.SA  text.SAREV  text.STATS  text.TEXT  text.TEXTREV  text.VOCAB  text_byte.SA  text_byte.STATS  text_byte.TEXT  text_byte.VOCAB
collections/unittest/index/: index-11232835930246985111.sdsl  index-11232835930246985111.sdsl.html  index-11662045166741407959.sdsl  index-11662045166741407959.sdsl.html  index-1830079602735486754.sdsl  index-1830079602735486754.sdsl.html
collections/unittest/tmp/: bwt_int_TMP.sdsl  bwt_int_TMPREV.sdsl  csa_1013530458070882339_TMP.sdsl  csa_1013530458070882339_TMPREV.sdsl  csa_11044666803894625167_TMP.sdsl  csa_11044666803894625167_TMPREV.sdsl  csa_12630136524597851258_TMP.sdsl  csa_12630136524597851258_TMPREV.sdsl  lcp_TMP.sdsl  lcp_TMPREV.sdsl  psi_TMP.sdsl  psi_TMPREV.sdsl
include/: ThreadPool.h  collection.hpp  common.hpp  compressed_counts.hpp  constants.hpp  index_stupid.hpp  index_succinct.hpp  index_succinct_compute_n1fb.hpp  index_succinct_store_n1fb.hpp  index_types.hpp  kn.hpp  kn_modified.hpp  kn_modified.hpp~  kneser_ney.hpp  knm.hpp  logging.hpp  precomputed_stats.hpp  precomputed_stats_REV.hpp  query-index-knm.hpp  query.hpp  query_kn.hpp  sample.hpp  sentinel_flag.hpp  timing.hpp  timings.hpp  util.hpp  utils.hpp  vocab_uncompressed.hpp
include/cstlm/: collection.hpp  compressed_counts.hpp  constants.hpp  counts_writer.hpp  index_succinct.hpp  index_types.hpp  kn.hpp  kn_modified.hpp  knm.hpp  logging.hpp  parallel_counts_writer.hpp  parallel_sa_construct.hpp  precomputed_stats.hpp  prob_cache.hpp  query.hpp  query_eigen.hpp  query_kn.hpp  sample.hpp  timings.hpp  utils.hpp  vocab_uncompressed.hpp
include/nn/: hyblm.hpp  nnconstants.hpp  rnnlm.hpp  word2vec.hpp
paper/: .gitignore  cstlm.tex  cstlm.tex~  local.bib  macros.tex  macros.tex~  packages.tex  sec-abstract-trevor.tex  sec-abstract.tex  sec-conclusion.tex  sec-experiments.tex  sec-experiments.tex~  sec-intro.tex  sec-lm.tex  sec-lm.tex~  sec-lmsdsl.tex  sec-suffix.tex  succinctLM.tex  supplementary.tex  supplementary.tex~
paper/figures/: fig-eu-de-space-time.R  fig-eu-de-space-time.csv  fig-eu-de-space-time.tex  fig-europarl-pplx-ngram.R  fig-europarl-pplx-ngram.csv  fig-europarl-pplx-ngram.tex  fig-europarl-pplx-ngram.tex~  fig-sa-bwt.tex  fig-suffix-tree.tex  fig-wiki-breakdown.R  fig-wiki-breakdown.csv  fig-wiki-breakdown.tex  fig-wt-bwt.tex  german_pattern_size.py  kn_dual_cst.graffle
src/: KNbuildintvec.cpp  bench-hyblm.cpp  build-and-bench-cstlm.cpp  build-and-bench-hyblm.cpp  build-and-bench-rnnlm.cpp  build-hyblm.cpp  build-index.cpp  check-query-file.cpp  compute-context-dist.cpp  create-byte-collection.cpp  create-collection.cpp  create-prefix-collection.cpp  cstlm-eval-ppl-tau.cpp  precompute-ngrams.cpp  query-index-knm.cpp  query-index-stupid.cpp  sample.cpp  train-hyblm.cpp  train-nn-index-knm.cpp  unit-test.cpp
